tests/codegen/fail/scalar/derive_input/attr_invalid_url.rs
use juniper::graphql_scalar;

#[graphql_scalar(specified_by_url = "not an url", transparent)]
struct ScalarSpecifiedByUrl(i32);

fn main() {}
